# FileTools

./: .gitignore  BUGFIX.md  CMakeLists.txt  README.md
src/: Application.cpp  Application.h  ArchiveOps.cpp  ArchiveOps.h  FileBrowser.cpp  FileBrowser.h  FileOperations.cpp  FileOperations.h  FileOpsPanel.cpp  FileOpsPanel.h  IconCache.cpp  IconCache.h  Theme.cpp  Theme.h  main.cpp  resource.rc
tools/: png2ico.cpp
